--- a/SCSS/layout/_base.scss
+++ b/SCSS/layout/_base.scss
@@ -18,11 +18,11 @@ html {
 
 body{
     font-family: 'Ubuntu', Arial, sans-serif;  
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    position: relative;
     color: #000000;
-  
-
+    height: 100%;
+    
+   
 }
 
 
