--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -45,3 +45,9 @@ $phone_mini: 384px;
 @import "section/order.scss";
 
 @import "section/map.scss";
+
+@import "section/order_overlay.scss";
+
+@import "section/review_overlay.scss";
+
+@import "section/composition.scss";
