--- a/SCSS/layout/_adjustment.scss
+++ b/SCSS/layout/_adjustment.scss
@@ -1,11 +1,19 @@
 .wrapper{
     overflow: hidden;
     width: 100%;
-    min-height: 100%;
+    //min-height: 100%;//
+    height: 100%;
     text-align: center;
     display: flex;
     align-items: center;
     flex-direction: column;
+    
+}
+
+.maincontent{
+    height: 100%;
+    min-height: 650px;
+    position: relative;
 }
 
 .section{
