--- a/CSS/main.css
+++ b/CSS/main.css
@@ -30,7 +30,10 @@
 .maincontent {
   height: 100%;
   min-height: 650px;
-  position: relative; }
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
+  will-change: transform; }
 
 .section {
   width: 100vw;
@@ -94,11 +97,14 @@ html {
     html {
       font-size: 10px; } }
 
+html, body {
+  height: 100%; }
+
 body {
   font-family: 'Ubuntu', Arial, sans-serif;
   position: relative;
   color: #000000;
-  height: 100%; }
+  width: 100%; }
 
 a {
   text-decoration: none;
@@ -120,7 +126,7 @@ ul.pagination {
   font-size: 1.14286rem;
   z-index: 500; }
 
-li.pagination__list {
+.pagination__list {
   width: 1.14286rem;
   height: 1.14286rem;
   margin-top: 0.21429rem;
@@ -135,10 +141,11 @@ li.pagination__list {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
-  li.pagination__list:hover {
+  .pagination__list:hover {
     border: 0.07143rem solid #ffffff; }
-  li.pagination__list:active {
-    border: 0.07143rem solid #ffffff; }
+
+.pagination__list.active {
+  border: 0.07143rem solid #ffffff; }
 
 .pagination__link {
   content: '';
@@ -559,6 +566,9 @@ li.best__item {
     .burger__slider {
       width: 71%;
       height: 90%; } }
+  @media screen and (max-width: 480px) {
+    .burger__slider {
+      width: 80%; } }
 
 h2.burger__title {
   color: #ffffff;
@@ -648,7 +658,7 @@ h2.burger__title {
       align-items: center; } }
   @media screen and (max-width: 480px) {
     .burger__list {
-      width: 90%;
+      width: 100%;
       margin-top: 3rem;
       margin-left: 0px;
       margin-right: 0px; } }
@@ -680,6 +690,9 @@ li.burger__item {
       -webkit-box-pack: center;
       -ms-flex-pack: center;
       justify-content: center; } }
+  @media screen and (max-width: 480px) {
+    li.burger__item {
+      height: 80%; } }
 
 .burger__column-left {
   height: 100%;
@@ -716,7 +729,7 @@ li.burger__item {
     @media screen and (max-width: 480px) {
       .burger__column-left .burger__composition {
         top: -6.42857rem;
-        left: -1.35714rem; } }
+        left: 0; } }
     .burger__column-left .burger__composition .burger__composition-link {
       color: #ffffff;
       height: 100%;
@@ -743,7 +756,7 @@ li.burger__item {
     @media screen and (max-width: 480px) {
       .burger__column-left .burger__kkal {
         top: -6.78571rem;
-        right: -1.35714rem; } }
+        right: 0; } }
     .burger__column-left .burger__kkal .burger__kkal-link {
       color: #ffffff;
       font-family: 'gagalinregular';
@@ -952,7 +965,7 @@ li.accordeon__item {
   background-size: cover;
   background-position: center;
   width: 7.14286rem;
-  height: 7.14286rem;
+  min-height: 7.14286rem;
   border-radius: 50%;
   overflow: hidden; }
 
