--- a/SCSS/layout/_adjustment.scss
+++ b/SCSS/layout/_adjustment.scss
@@ -10,11 +10,12 @@
     
 }
 
-.maincontent{
+.maincontent {
     height: 100%;
     min-height: 650px;
-    position: relative;
-}
+    transition: 1s;
+    will-change: transform;
+  }
 
 .section{
     
