--- a/SCSS/layout/_base.scss
+++ b/SCSS/layout/_base.scss
@@ -15,12 +15,16 @@ html {
  }
 }
 
+html, body{
+    height: 100%;
+}
 
 body{
     font-family: 'Ubuntu', Arial, sans-serif;  
     position: relative;
     color: #000000;
-    height: 100%;
+    
+    width: 100%;
     
    
 }
