--- a/SCSS/section/hamburger_menu.scss
+++ b/SCSS/section/hamburger_menu.scss
@@ -20,10 +20,14 @@
     height: 99%;
     
   }
+
+  .header__logo-overlay{
+    position: absolute;
+  }
   
   .overlay__content {
     
-    
+    height: 100%;
     padding: 10px;
     color: #fff;
     font: 16px Helvetica, sans-serif;
@@ -47,13 +51,10 @@
   .overlay__menu{
    text-align: center;
     font-size: rem(24px);
-    position: absolute;
-    top: 28%;
-    left: 0;
-    right: 0;
-    bottom: 50%;
-    margin: 0;
-
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     
 }
   
