--- a/SCSS/section/order.scss
+++ b/SCSS/section/order.scss
@@ -212,11 +212,12 @@ label.form__radio-title:before {
         
     }    
 
- input.form__radio:checked + label.form__radio-title:before {
-    background: url('../images/orders/ellipse.png') no-repeat center;
-    background-color: white;
-        
-        }
+    input.form__radio:checked + label.form__radio-title:before {
+        background: url('../images/orders/ellipse.png');
+        background-color: $white;
+        background-position: center;
+            
+            }
 
 
 
@@ -237,6 +238,8 @@ label.form__checkbox-title:before {
 
     input.form__checkbox:checked + label.form__checkbox-title:before {
         background-image: url('../images/orders/check.png');
+        background-position: center;
+        
         
         }        
     
